tests/fixtures/invalid/pow_bytes_int_int.py
# Cannot call pow() with Bytes, Int, Int
x = pow(b"hello", 1, 1)
